@@ -19,6 +19,7 @@
     * remove deprecated Request.subprocess_env
     * remove deprecated Request.add_common_vars
     * remove deprecated request.SERVER_RETURN
+    * Application name property
 
 ==== 1.5.1 ====
     * append missing cmp function when python3 is use
